vlib/v/parser/tests/fn_type_only_args_unknown_name.out
vlib/v/parser/tests/fn_type_only_args_unknown_name.vv:1:16: error: functions with type only args can not have bodies
    1 | fn test(param) {
      |                ^
    2 | }
    3 |
